force-app/main/default/objects/LSF_Price_Sheet_Detail__c/LSF_Price_Sheet_Detail__c.object-meta.xml
<CustomObject>
    <label>LSF Price Sheet Detail</label>
    <nameField>
        <displayFormat>PSD-{0000000000}</displayFormat>
        <label>Price Sheet Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LSF Price Sheet Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>