force-app/main/default/objects/LSF_Price_Sheet_Detail__c/fields/LSF_Product__c.field-meta.xml
<CustomField>
    <fullName>LSF_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>LSF Product</label>
    <referenceTo>LSF_Product__c</referenceTo>
    <relationshipLabel>Pricing</relationshipLabel>
    <relationshipName>LSF_Price_Sheet_Details</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>