force-app/main/default/objects/LSF_Price_Sheet_Detail__c/fields/Price_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Price_Sheet__c</fullName>
    <label>Price Sheet</label>
    <referenceTo>LSF_Price_Sheet__c</referenceTo>
    <relationshipLabel>Price Sheet Details</relationshipLabel>
    <relationshipName>LSF_Price_Sheet_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>